--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "bootstrap": "^4.5.3",
         "react": "^17.0.1",
+        "react-anchor-link-smooth-scroll": "^1.0.12",
+        "react-bootstrap": "^1.4.0",
         "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0",
+        "react-router-hash-link": "^2.2.2",
         "react-scripts": "4.0.0",
         "react-styles-hook": "^1.1.2",
         "web-vitals": "^0.2.4"
